...
            keyboardController?.hide()
            displayMessage = factory.saveEmployee(Employee(name, phoneNo, address))
            name = ""
            phoneNo = ""
            address = ""
        }) {
            Text(text = "Save")
        }
        Text(text = displayMessage)
    }
}
