package com.example.jetpack_multiplenavigation.students.core.util

object TestTags {
    const val STUDNET_NAME_TEXT_FIELD = "student_name_text_field"
    const val STUDENT_SECONDNAME_TEXT_FIELD = "student_secondname_text_field"
    const val STUDENT_AGE_TEXT_FIELD = "student_age_text_field"
}